# EllipseCollision

./: CMakeLists.txt  EllipseDescriptor.cpp  EllipseDescriptor.hpp  EllipseShape.cpp  EllipseShape.hpp  FontManager.cpp  FontManager.hpp  README.md  main.cpp  optimization.hpp
